--- a/react/vidly/package.json
+++ b/react/vidly/package.json
@@ -8,7 +8,8 @@
     "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
