--- a/react/http-app/package.json
+++ b/react/http-app/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sentry/browser": "^5.4.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "prettier": "^1.18.2",
+    "raven-js": "^3.27.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-toastify": "^5.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
