--- a/react/vidly/package.json
+++ b/react/vidly/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@hapi/joi": "^15.0.3",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "joi-browser": "^13.4.0",
@@ -11,7 +12,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "react-toastify": "^5.3.1"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
