--- a/Node/vidly/package.json
+++ b/Node/vidly/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-demo",
+  "name": "vidly",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,12 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/joi": "^15.1.0",
-    "config": "^3.1.0",
-    "debug": "^4.1.1",
-    "express": "^4.17.1",
-    "helmet": "^3.18.0",
-    "morgan": "^1.9.1",
-    "pug": "^2.0.4"
+    "express": "^4.16.2",
+    "joi": "^13.1.0",
+    "mongoose": "^5.0.2"
   }
 }
