--- a/Node/vidly/package.json
+++ b/Node/vidly/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --verbose"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +13,17 @@
     "bcrypt": "^3.0.6",
     "config": "^3.1.0",
     "express": "^4.16.2",
+    "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
     "joi": "^13.1.0",
     "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
-    "mongoose": "^5.6.2"
+    "mongoose": "^5.6.2",
+    "winston": "^3.2.1",
+    "winston-mongodb": "^5.0.0"
+  },
+  "devDependencies": {
+    "supertest": "^4.0.2"
   }
 }
