--- a/react-practice/package.json
+++ b/react-practice/package.json
@@ -37,6 +37,8 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
+    "lodash": "^4.17.15",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
